[package]
name = "rust-procmon-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.34.0"
features = [
  "alloc",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [ "hidclass", "minwindef", ]
